<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical"

            android:paddingLeft="@dimen/view_padding"
            android:paddingTop="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            tools:context=".MainActivity">


            <!--        title        -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_title"
                android:textColor="@color/colorText"
                android:textSize="@dimen/title_txtsize"
                android:textStyle="normal|bold" />

            <!--      fragment imagebuttons and text-->

            <ImageButton
                android:id="@+id/fragmentButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mouse" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentText1"
                android:textColor="@color/colorText"
                android:textSize="@dimen/default_txtsize"
                android:textStyle="normal|bold"/>
            <ImageButton
                android:id="@+id/fragmentButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/headset" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentText2"
                android:textColor="@color/colorText"
                android:textSize="@dimen/default_txtsize"
                android:textStyle="normal|bold"/>
            <ImageButton
                android:id="@+id/fragmentButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/monitor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentText3"
                android:textColor="@color/colorText"
                android:textSize="@dimen/default_txtsize"
                android:textStyle="normal|bold"/>
            <ImageButton
                android:id="@+id/fragmentButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentText4"
                android:textColor="@color/colorText"
                android:textSize="@dimen/default_txtsize"
                android:textStyle="normal|bold"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/frm_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>